refactor: change the css file according to rule 2.1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <input type="text" class="tasklist-in task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove task">
+            <img class="delete-img" src="./remove.svg" alt="Remove task">
           </button>
         </li>
         <li class="tasklist-items tasklist-items-edit">
@@ -38,7 +38,7 @@
           <input type="text" value="Go Shopping" class="tasklist-in task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove task">
+            <img class="delete-img" src="./remove.svg" alt="Remove task">
           </button>
         </li>
       </ul>
@@ -52,7 +52,7 @@
           <input type="text" class="tasklist-in task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt ="Remove task">
+            <img class="delete-img" src="./remove.svg" alt ="Remove task">
           </button>
         </li>
       </ul>
